# anonymous-hf

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_TEMPLATE.md  CLAUDE.md  README.md  UI_DESIGN_TEMPLATE.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/anonymizer/: admin.py  analytics.py  apps.py  models.py  permissions.py  proxy_urls.py  proxy_views.py  serializers.py  urls.py  views.py
backend/anonymizer/management/commands/: cleanup_expired.py  export_repos.py
backend/anonymizer/migrations/: 0001_initial.py  0002_abuseflag.py  0003_add_download_and_preview_fields.py  0004_remove_preview_fields.py  0005_remove_ip_and_useragent_from_activitylog.py  0006_activitylog_actor_type_anonymousrepo_colab_url.py  0007_add_restored_action.py  0008_add_created_action.py  0009_alter_activitylog_action.py  0010_remove_abuseflag.py  0011_remove_allow_download.py  0012_drop_counters_alter_actor_type.py  0013_remap_actor_type_viewer.py
backend/anonymizer/services/: huggingface_client.py
backend/anonymizer/tests/: factories.py  test_analytics.py  test_huggingface_client.py  test_models.py  test_proxy_views.py  test_views.py
backend/anonymous_hf/: production_settings.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py  oauth_urls.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_user_hf_api_token.py
backend/core/tests/: factories.py  test_models.py  test_oauth.py  test_views.py
backend/templates/admin/: base_site.html
(+54 files in other folders)
